# CDP8

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LIBRARY_DESIGN.md  Makefile  README.md  pyproject.toml
.github/workflows/: build-publish.yml
cycdp/: CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
cycdp/.github/workflows/: build-publish.yml  ci.yml
cycdp/demos/: 01_basic_operations.py  04_granular_synthesis.py  07_morphing.py  README.md  fx01_time_and_pitch.py  fx03_granular.py  fx05_distortion_dynamics.py  fx06_psow_fof.py  fx07_creative_chains.py
cycdp/src/cycdp/: _core.pyx
cycdp/tests/: test_pycdp.py
demos/: 02_effects_and_processing.py  03_spectral_processing.py  05_pitch_synchronous.py  06_creative_techniques.py  README.md  fx02_spectral_effects.py  fx04_reverb_delay_mod.py
dev/: CMakeLists.txt
libcdp/: CMakeLists.txt  DEV_GUIDE.md  README.md  TODO.md  cdp.pc.in
libcdp/cdp_lib/: CMakeLists.txt  cdp_analysis.c  cdp_analysis.h  cdp_constrict.h  cdp_distort.c  cdp_distort.h  cdp_dynamics.c  cdp_effects.h  cdp_envelope.c  cdp_envelope.h  cdp_experimental.c  cdp_filters.c  cdp_filters.h  cdp_flutter.c  cdp_fofex.h  cdp_granular.c  cdp_granular.h  cdp_granular_ext.c  cdp_hover.c  cdp_hover.h  cdp_io_redirect.h  cdp_lib.c  cdp_lib.h  cdp_lib_internal.h  cdp_morph.c  cdp_morph_native.h  cdp_playback.c  cdp_playback.h  cdp_reverb.c  cdp_sfsys_shim.h  cdp_shim.c  cdp_shim.h  cdp_spectral.c  cdp_spectral.h  cdp_transform.c  cdp_wrappage.c  cdp_wrappage.h  test_cdp_lib.c
libcdp/include/: cdp.h  cdp_types.h
libcdp/src/: buffer.c  cdp_shim.c  cdp_wrapper.c  cdp_wrapper.h  channel.c  context.c  error.c  gain.c  io.c  utils.c
libcdp/tests/: test_cdp.c
projects/cpd8/: README.md
projects/libcdp/: CMakeLists.txt  DEV_GUIDE.md  README.md  TODO.md
projects/libcdp/cdp_lib/: cdp_constrict.c  cdp_distort.c  cdp_dynamics.h  cdp_effects.c  cdp_envelope.c  cdp_experimental.h  cdp_filters.h  cdp_flutter.c  cdp_flutter.h  cdp_fofex.c  cdp_granular.c  cdp_granular.h  cdp_granular_ext.h  cdp_io_redirect.c  cdp_lib.c  cdp_lib.h  cdp_morph.h  cdp_morph_native.c  cdp_phase.c  cdp_phase.h  cdp_psow.c  cdp_psow.h  cdp_reverb.h  cdp_spectral.c  cdp_spectral.h  cdp_synth.c  cdp_synth.h  cdp_transform.h  test_shim_multi_input.c
projects/libcdp/include/: cdp.h  cdp_error.h
projects/libcdp/src/: io.c  mix.c  spatial.c  utils.c
projects/libcdp/tests/: test_cdp.c
pycdp/: CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
pycdp/.github/workflows/: build-publish.yml  ci.yml
pycdp/demos/: 01_basic_operations.py  02_effects_and_processing.py  03_spectral_processing.py  04_granular_synthesis.py  05_pitch_synchronous.py  06_creative_techniques.py  07_morphing.py  README.md  fx01_time_and_pitch.py  fx02_spectral_effects.py  fx03_granular.py  fx04_reverb_delay_mod.py  fx05_distortion_dynamics.py  fx06_psow_fof.py  fx07_creative_chains.py
pycdp/src/pycdp/: __init__.py  _core.pyx  cdp_lib.pxd
pycdp/tests/: test_pycdp.py
src/cycdp/: __init__.py  __main__.py  _core.pyi  cli.py
tests/: test_cli.py  test_pycdp.py
